# Skadz_Algorithm

./: .gitignore  README.md  champ_rec.bat  champ_rec.py  champion_priors.csv  dataset.py  main.bat  main.py  process.py  pyproject.toml  requirements.txt
core/: champion_resolver.py  enums.py  lcu_champ_select.py  lcu_client.py  recommend.py  repo.py  role_guess.py  score.py
core/repo/: __init__.py  matchup_repository.py  priors_repository.py
core/services/: __init__.py  draft_score_service.py  recommend_service.py  win_rate_service.py
data/: champion_links.txt  champion_priors.csv
scripts/: champion_icons.py  config.py  dataset.py  download_champion_links.py  download_champion_matchups.py  download_champion_priors.py  download_champions_and_icons.py  download_dataset.py  process.py  process_dataset.py  script.py
tests/: test_champion_resolver.py  test_lcu_champ_select.py  test_recommend.py  test_role_guess.py
ui/: app.py  autocompleteEntryPopup.py  controller.py  view_adapter.py
ui/components/draft_score/: DraftScoreController.py  __init__.py  view_adapter.py
ui/components/recommend/: __init__.py  recommend_controller.py  recommend_view.py
ui/components/win_rate/: __init__.py  view_adapter.py  win_rate_controller.py
ui/controllers/: __init__.py  win_rate_controller.py
ui/view_adapters/: __init__.py
