[project]
name = "champ-rec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arviz==0.21.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "cons==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "etuples==0.3.9",
    "filelock==3.18.0",
    "fonttools==4.58.0",
    "fsspec==2025.3.2",
    "h11==0.16.0",
    "h5netcdf==1.6.1",
    "h5py==3.13.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "kiwisolver==1.4.8",
    "logical-unification==0.4.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "mdurl==0.1.2",
    "minikanren==1.0.3",
    "mpmath==1.3.0",
    "multipledispatch==1.0.0",
    "networkx==3.4.2",
    "numpy==2.2.2",
    "opt-einsum==3.4.0",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "pycparser==2.22",
    "pygments==2.19.1",
    "pymc==5.22.0",
    "pyparsing==3.2.3",
    "pyperclip==1.9.0",
    "pyro-api==0.1.2",
    "pyro-ppl==1.9.1",
    "pysocks==1.7.1",
    "pytensor==2.30.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2024.2",
    "requests==2.32.3",
    "rich==14.0.0",
    "scipy==1.15.1",
    "selenium==4.32.0",
    "setuptools==80.4.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.7",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "toolz==1.0.0",
    "torch==2.7.0",
    "tqdm==4.67.1",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.13.2",
    "tzdata==2025.1",
    "urllib3==2.4.0",
    "webdriver-manager==4.0.2",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
    "xarray==2025.4.0",
    "xarray-einstats==0.8.0",
]
